kubernetes/apps/authentik/authentik/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  annotations:
    gatus.home-operations.com/endpoint: |
      name: authentik
      url: https://auth.xcd.dev/-/health/ready/
      conditions:
        - '[STATUS] == 200'
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - 'auth.xcd.dev'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ak-outpost-authentik-embedded-outpost
          port: 9000
