kubernetes/apps/authentik/authentik/app/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-server
  namespace: authentik
spec:
  description: Restrict authentik-server egress to the pooler.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: server
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            k8s:cnpg.io/poolerName: authentik-pooler
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-worker
  namespace: authentik
spec:
  description: Restrict authentik-worker egress to authentik-pg, the kube-apiserver, smtp-relay, and Pushover.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: worker
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            k8s:cnpg.io/cluster: authentik-pg
            k8s:cnpg.io/podRole: instance
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tools
            k8s:app.kubernetes.io/name: smtp-relay
      toPorts:
        - ports:
            - port: "25"
              protocol: TCP
    - toFQDNs:
        - matchName: api.pushover.net
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
